tests/snapshots/parse_paragraph_03.snap
---
source: src/parser.rs
expression: output
---
Paragraph
  ParaSegment
    TextChunk
      Word: "I"
      WhiteSpace: " "
      Word: "am"
      WhiteSpace: " "
      Word: "a"
      WhiteSpace: " "
      Word: "paragraph"
      WhiteSpace: " "
      Word: "segment"
      Dot: "."
    LineEnding: "\n"
  ParaSegment
    TextChunk
      Word: "I"
      WhiteSpace: " "
      Word: "am"
      WhiteSpace: " "
      Word: "another"
      WhiteSpace: " "
      Word: "paragraph"
      WhiteSpace: " "
      Word: "segment"
      Dot: "."
    LineEnding: "\n"
  ParaSegment
    TextChunk
      WhiteSpace: "    "
      Word: "Together"
      WhiteSpace: " "
      Word: "we"
      WhiteSpace: " "
      Word: "form"
      WhiteSpace: " "
      Word: "a"
      WhiteSpace: " "
      Word: "paragraph"
      Dot: "."
