tests/snapshots/parse_text_chunk_02.snap
---
source: src/parser.rs
expression: output
---
TextChunk
  Word: "this"
  WhiteSpace: " "
  Word: "is"
  WhiteSpace: " "
  Word: "text"
  WhiteSpace: " "
  Word: "chunk"
  Error: " " (unexpected WhiteSpace)
