tests/snapshots/parse_verbatim_04.snap
---
source: src/parser.rs
expression: output
---
Verbatim
  Pipe: "|"
  TextChunk
    Tilda: "~"
    WhiteSpace: " "
    Backtick: "`"
    LCurly: "{"
    RCurly: "}"
    Tilda: "~"
    ForwardSlash: "\\"
    Word: "thre"
  Pipe: "|"
