tests/snapshots/parse_verbatim_05.snap
---
source: src/parser.rs
expression: output
---
Verbatim
  Error: "|" (unclosed delimiter)
  TextChunk
    Word: "this"
    WhiteSpace: " "
    Word: "is"
    WhiteSpace: " "
    Word: "a"
    WhiteSpace: " "
    Word: "test"
