tests/snapshots/text_chunk_01.snap
---
source: src/parser.rs
expression: output
---
TextChunk
  Word: "this"
  WhiteSpace: " "
  Word: "is"
  WhiteSpace: " "
  Word: "text"
  WhiteSpace: " "
  Word: "chunk"
