tests/snapshots/verbatim_02.snap
---
source: src/parser.rs
expression: output
---
Verbatim
  Pipe: "|"
  TextChunk
    WhiteSpace: " "
    Word: "this"
    WhiteSpace: " "
    Word: "is"
    WhiteSpace: " "
    Word: "a"
    WhiteSpace: " "
    Word: "test"
    WhiteSpace: " "
  Pipe: "|"
