tests/snapshots/verbatim_03.snap
---
source: src/parser.rs
expression: output
---
Verbatim
  Pipe: "|"
  TextChunk
    Tilda: "~"
    WhiteSpace: " "
    Word: "this"
    WhiteSpace: " "
    Word: "is"
    WhiteSpace: " "
    Word: "a"
    WhiteSpace: " "
    Word: "test"
    WhiteSpace: " "
    Exclamation: "!"
    DoubleQoute: "\""
    Pound: "#"
    Dollar: "$"
    Percent: "%"
    Ampersand: "&"
    SingleQoute: "'"
    LParen: "("
    RParen: ")"
    Asterisk: "*"
    Plus: "+"
    Comma: ","
    Hyphen: "-"
    Dot: "."
    Slash: "/"
    Colon: ":"
    Semicolon: ";"
    LessThan: "<"
    Equal: "="
    GreaterThan: ">"
    QuestionMark: "?"
    At: "@"
    LSquare: "["
    RSquare: "]"
    Caret: "^"
    Underscore: "_"
    Backtick: "`"
    LCurly: "{"
    RCurly: "}"
    Tilda: "~"
    ForwardSlash: "\\"
    Word: "thre"
  Pipe: "|"
